hphp/test/zend/bad/ext/date/tests/bug55397.php
<?php
date_default_timezone_set('Europe/Prague');
var_dump(unserialize('O:8:"DateTime":0:{}') == new DateTime);
?>